--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,10 +4,16 @@ p
 p
   | Body: #{@question.body}
 
-= link_to 'Answer on it','#', id: "answerButton"
-
-#comment_form
-  = render 'questions/answer_from'
+- if user_signed_in?
+  div
+    = link_to 'Answer on it', '#', id: "answerButton"
+    #comment_form
+      = render 'questions/answer_from'
+- else
+  p
+    | Please Sign Up or Sign In to be able to leave an answer.
+  h2
+    = link_to "Sign up", new_user_registration_path
 
 #list_of_answers
   = render 'questions/list_of_answers'
