--- a/app/views/questions/_answer_from.html.slim
+++ b/app/views/questions/_answer_from.html.slim
@@ -1,4 +1,4 @@
 h4 Write your answer here
-= form_tag question_answers_path(@question), method: :post do
-  = text_field_tag :body
-  = submit_tag
+= form_with model: [@question, Answer.new], method: :post do |f|
+  = f.text_field :body
+  = f.submit
