--- a/app/views/questions/_answer_from.html.slim
+++ b/app/views/questions/_answer_from.html.slim
@@ -1,4 +1,5 @@
 h4 Write your answer here
 = form_with model: [@question, Answer.new], method: :post do |f|
+  = f.label :body
   = f.text_field :body, id: 'answer_body'
   = f.submit
