--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,2 @@
-$('#list_of_answers').html('<%= j render 'questions/list_of_answers' %>');
+$('#list_of_answers').append('<%= j render @answer %>');
 $('#answer_body').val('');
