--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -16,7 +16,7 @@ table
         td
           = link_to 'Show', question_path(c.id)
         td
-          - if user_signed_in? && current_user.id == c.user_id
+          - if user_signed_in? && current_user.author_of?(c)
             = link_to 'Delete', question_path(c), method: :delete, data: { confirm: 'Are you sure?' }
           - else
             | Not permitted
