l27 added author_of? method to _answer form + added test for deleting answer not owned the current user

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,7 +1,7 @@
 td = @answer.id
 td = @answer.body
 td
-  - if user_signed_in? && current_user.id == @answer.user_id
+  - if user_signed_in? && current_user.author_of?(@answer)
     = link_to 'Delete', question_answer_path(@question, @answer), method: :delete, data: {confirm: 'Are you sure?'}
   - else
     | Not permitted
