l28 added rendering of question.title and question.body

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,7 +1,11 @@
 h1 Question details
 #question_details
-= render 'questions/question_details'
-
+  p Title:
+  #question_title
+    = @question.title # уточнить как вывести на один уровень
+  p Body:
+  #question_body
+    = @question.body
 - if user_signed_in?
   div
     = link_to 'Edit', '#', id: "editButton"
