--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -1,1 +1,3 @@
-$('#question_details').html('<%= j render 'questions/question_details' %>');
+//$('#question_details').html('<%= j render 'questions/question_details' %>');
+$('#question_title').html('<%= @question.title %>');
+$('#question_body').html('<%= @question.body %>');
