--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,7 +2,8 @@ h1 Question details
 #question_details
   p Title:
   #question_title
-    = @question.title # уточнить как вывести на один уровень
+    = @question.title
+    // уточнить как выровнить в одну линию
   p Body:
   #question_body
     = @question.body
