--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -5,13 +5,23 @@ table
       th Id
       th Body
       th Delete
+      th Update
   tbody
     - @question.answers.each do |a|
       tr
         td = a.id
-        td = a.body
+        td
+          #answer_body
+            = a.body
         td
           - if user_signed_in? && current_user.author_of?(a)
             = link_to 'Delete', question_answer_path(@question, a), method: :delete, data: { confirm: 'Are you sure?' }
+          - else
+            | Not permitted
+        td
+          - if user_signed_in? && current_user.author_of?(a)
+            = link_to 'Update', '#', id: "editAnswerButton"
+            #edit_answer
+              = render 'questions/edit_answer', answer: a
           - else
             | Not permitted
