--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -1,3 +1,4 @@
+
 h3 List of Answers
 table
   thead
@@ -10,17 +11,15 @@ table
     - @question.answers.each do |a|
       tr
         td = a.id
-        td
-          #answer_body
-            = a.body
+        td = a.body
         td
           - if user_signed_in? && current_user.author_of?(a)
-            = link_to 'Delete', question_answer_path(@question, a), method: :delete, data: { confirm: 'Are you sure?' }
+            = link_to 'Delete', question_answer_path(@question, a), method: :delete, data: { confirm: 'Are you sure?', remote: true }
           - else
             | Not permitted
         td
           - if user_signed_in? && current_user.author_of?(a)
-            = link_to 'Update', '#', id: "editAnswerButton"
+            = link_to 'Update', '#', id: "editAnswerButton", data: { answer_id: a.id }
             #edit_answer
               = render 'questions/edit_answer', answer: a
           - else
