l28 ajax for best answer, best answer always has a first position

--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -9,7 +9,7 @@ table
       th Update
       th Best Answer?
   tbody
-    - @question.answers.each do |a|
+    - @question.answers.best_answer_first.each do |a|
       tr
         td = a.id
         td = a.body
@@ -28,7 +28,7 @@ table
         td
           - if user_signed_in? && current_user.author_of?(@question)
             - if a.best_answer.equal?(false)
-              = link_to 'Mark as a best answer', question_answer_mark_as_best_path(answer_id: a.id, question_id: @question.id, id: a)
+              = link_to 'Mark as a best answer', question_answer_mark_as_best_path(answer_id: a.id, question_id: @question.id, id: a), remote: true
             - else
               | This is a best answer
           - else
