--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -9,6 +9,9 @@ table
       th Best Answer?
   tbody
     - @question.answers.best_answer_first.each do |a|
+      - if a.errors.any?
+        - a.errors.full_messages.each do |m|
+          = m
       tr
         td = a.id
         td = a.body
