--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -7,6 +7,7 @@ table
       th Delete
       th Update
       th Best Answer?
+      th Attachments
   tbody
     - @question.answers.best_answer_first.each do |a|
       - if a.errors.any?
@@ -17,12 +18,12 @@ table
         td = a.body
         td
           - if user_signed_in? && current_user.author_of?(a)
-            = link_to 'Delete', question_answer_path(@question, a), method: :delete, data: { confirm: 'Are you sure?', remote: true }
+            = link_to 'Delete', question_answer_path(@question, a), method: :delete, data: {confirm: 'Are you sure?', remote: true}
           - else
             | Not permitted
         td
           - if user_signed_in? && current_user.author_of?(a)
-            = link_to 'Update', '#', id: "editAnswerButton", data: { answer_id: a.id }
+            = link_to 'Update', '#', id: "editAnswerButton", data: {answer_id: a.id}
             #edit_answer
               = render 'questions/edit_answer', answer: a
           - else
@@ -35,3 +36,10 @@ table
               | This is a best answer
           - else
             | Not permitted
+        td
+          - if @answer.attachments.empty?
+            | No attachments yet
+          - else
+            ul
+            - @answer.attachments.each do |att|
+              li = link_to att.file.identifier, att.file.url
