l29 added a possibility to delete file from answer

--- a/app/views/questions/_answer_from.html.slim
+++ b/app/views/questions/_answer_from.html.slim
@@ -6,7 +6,8 @@ h4 Write your answer here
   = f.label :body
   = f.text_field :body, id: 'answer_body'
   p
-    = f.fields_for :attachments, method: :post do |a|
-      = a.label :file
-      = a.file_field :file
+    = f.fields_for :attachments do |a|
+      = render 'questions/attachment_fields', f: a
+      p
+        = link_to_add_association 'add file', f, :attachments
   = f.submit
