--- a/app/views/questions/_edit_answer.html.slim
+++ b/app/views/questions/_edit_answer.html.slim
@@ -2,4 +2,7 @@ h4 Edit your answer here
 = form_with model: [@question, answer], method: :patch do |f|
   = f.label :body
   = f.text_field :body, id: 'answer_body_edit'
+  = f.fields_for :attachments do |a|
+    = a.check_box :_destroy
+    = a.label :_destroy
   = f.submit
