--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -2,4 +2,9 @@ h1 Create new Question here
 = form_for @question do |f|
   = f.text_field :title, placeholder: 'Title'
   = f.text_field :body, placeholder: 'Body of question'
+  p
+    = f.fields_for :attachments do |a|
+      = render 'questions/attachment_fields', f: a
+      p
+        = link_to_add_association 'add file', f, :attachments
   = f.submit
