--- a/app/views/questions/_edit_question.html.slim
+++ b/app/views/questions/_edit_question.html.slim
@@ -7,5 +7,5 @@ h4
   = f.text_field :body, id: 'question_body'
   = f.fields_for :attachments do |a|
     = a.check_box :_destroy
-    = a.label :_destroy
+    = a.label :_destroy, "Delete #{a}"
   = f.submit
