--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,3 @@
-$('#list_of_answers').append('<%= j render @answer %>');
+//$('#list_of_answers').append('<%= j render @answer %>');
+$('#list_of_answers').html('<%= j render 'questions/list_of_answers' %>');
 $('#answer_body').val('');
