--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -8,12 +8,13 @@ table
       th Update
       th Best Answer?
       th Attachments
+      th Vote
   tbody
     - @question.answers.best_answer_first.each do |a|
       - if a.errors.any?
         - a.errors.full_messages.each do |m|
           = m
-      tr  id=("answer_el-#{a.id}")
+      tr id=("answer_el-#{a.id}")
         td = a.id
         td
           span id=("answer_el_body-#{a.id}")
@@ -45,3 +46,24 @@ table
               - a.attachments.each do |att|
                 li
                   = link_to att.file.identifier, att.file.url
+        td
+          - if user_signed_in? && current_user.author_of?(@question)
+            p id=("answer_vote-#{a.id}")
+              | Result:
+              span = a.votes
+          - else
+            p id=("answer_vote-#{a.id}")
+              | Result:
+              span = a.votes
+            p
+              = link_to '+',
+                      question_answer_plus_vote_path(answer_id: a.id, question_id: @question.id, id: a),
+                      remote: true,
+                      data: {answer_id: a.id, type: :json},
+                      class: 'vote_answer'
+            p
+              = link_to '-',
+                      question_answer_minus_vote_path(answer_id: a.id, question_id: @question.id, id: a),
+                      remote: true,
+                      data: {answer_id: a.id, type: :json},
+                      class: 'vote_answer'
