--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -9,6 +9,7 @@ table
       th Best Answer?
       th Attachments
       th Vote
+      th Reset
   tbody
     - @question.answers.best_answer_first.each do |a|
       - if a.errors.any?
@@ -59,11 +60,14 @@ table
               = link_to '+',
                       question_answer_plus_vote_path(answer_id: a.id, question_id: @question.id, id: a),
                       remote: true,
-                      data: {answer_id: a.id, type: :json, vote: a.get_vote + 1},
+                      data: {answer_id: a.id, type: :json, vote: a.get_vote},
                       class: 'vote_answer'
             p
               = link_to '-',
                       question_answer_minus_vote_path(answer_id: a.id, question_id: @question.id, id: a),
                       remote: true,
-                      data: {answer_id: a.id, type: :json, vote: a.get_vote - 1},
+                      data: {answer_id: a.id, type: :json, vote: a.get_vote},
                       class: 'vote_answer'
+        td
+          = link_to 'Reset', reset_votes_question_answer_path(answer_id: a.id, question_id: @question.id, id: a), remote: true
+          // уточнить, почему нельзя просто передать а
