set actioncable for questions as example

--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -6,7 +6,7 @@ table
       th Title
       th Details
       th Delete
-  tbody
+  tbody.questions_list
     - @questions.each do |c|
       tr
         td
