--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -22,7 +22,7 @@ table
             = a.body
         td
           - if user_signed_in? && current_user.author_of?(a)
-            = link_to 'Delete', answer_path(@question, a), method: :delete, data: {confirm: 'Are you sure?', remote: true}
+            = link_to 'Delete', answer_path(a), method: :delete, data: {confirm: 'Are you sure?', remote: true}
           - else
             | Not permitted
         td
