--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -59,3 +59,5 @@ h1 Question details
 
 #list_of_answers
   = render 'questions/list_of_answers'
+.comments_section
+  = render 'questions/comments'
