--- a/app/views/questions/_list_of_answers.html.slim
+++ b/app/views/questions/_list_of_answers.html.slim
@@ -10,6 +10,7 @@ table
       th Attachments
       th Vote
       th Reset
+      th Add comment
   tbody
     - @question.answers.best_answer_first.each do |a|
       - if a.errors.any?
@@ -72,4 +73,5 @@ table
                       class: 'vote_answer'
         td
           = link_to 'Reset', reset_votes_answer_path(answer_id: a.id, question_id: @question.id, id: a), method: :post, remote: true
-          // уточнить, почему нельзя просто передать а
+        td
+          = render 'answer_comments', answer: a
