--- a/app/views/questions/_comments.html.slim
+++ b/app/views/questions/_comments.html.slim
@@ -4,6 +4,6 @@ h2 Leave your comment for question here
   = f.text_field :comment
   = f.submit "Comment"
 ul
-  div class=("comments_question_#{@question.id}")
+  .comment_details data-id="#{@question.id}" data-type="question"
     - @question.comments.each do |comment|
       li = comment.body
