--- a/app/views/questions/_answer_comments.html.slim
+++ b/app/views/questions/_answer_comments.html.slim
@@ -6,7 +6,6 @@ h4 Leave your comment for answer here
   = f.hidden_field :answer_id, value: answer.id
   = f.submit "Comment"
 ul
-  / div class=("comments_answer_#{answer.id}")
-  .comment_details data-id="#{answer.id}" data-type="answer"
-    - answer.comments.each do |comment|
+  .comment_answer_details data-id="#{answer.id}" data-type="answer"
+    - answer.comments.reverse.each do |comment|
       li = comment.body
