--- a/app/views/questions/_answer_comments.html.slim
+++ b/app/views/questions/_answer_comments.html.slim
@@ -1,8 +1,8 @@
 h4 Leave your comment for answer here
-= form_with url: add_comment_answer_path(@question, answer), class: 'send_comment_form', method: :post, data: {answer_id: answer.id} do |f|
+= form_with url: add_comment_answer_path(answer.question.id, answer), class: 'send_comment_form', method: :post, data: {answer_id: answer.id} do |f|
   = f.label :comment
   = f.text_field :comment
-  = f.hidden_field :question_id, value: @question.id
+  = f.hidden_field :question_id, value: answer.question.id
   = f.hidden_field :answer_id, value: answer.id
   = f.submit "Comment"
 ul
