--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,5 +1,5 @@
 // Place all the styles related to the Questions controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #comment_form {
@@ -8,4 +8,8 @@
 
 .answer_form {
   display: none;
+}
+
+.question_content{
+  text-indent: 10px;
 }
