--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -49,11 +49,8 @@ h1 Question details
                 method: :post
 .question_content
   - if user_signed_in?
-    - if current_user.subscriptions.where(question: @question).empty?
-      div
-        = link_to 'Subscribe', subscribe_question_path, method: :post
-    - else
-        = link_to 'Unsubscribe', unsubscribe_question_path, method: :post
+    div class="sub"
+      = render partial: 'subscriptions/subscription_form', locals: {question: @question}
     div
       = link_to 'Edit', '#', id: "editButton"
       #edit_form
