--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.answer_search {
+  div {
+    text-indent: 10px;
+    font-family: "Droid Sans";
+    font-size: large;
+  }
+}
+.question_search {
+  div {
+    text-indent: 10px;
+    font-family: "Droid Sans";
+    font-size: large;
+  }
+}
+.user_search {
+  div {
+    text-indent: 10px;
+    font-family: "Droid Sans";
+    font-size: large;
+  }
+}
