turbolinks turned off in body

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body>
+<body data-turbolinks="false">
 <nav class="navbar navbar-light bg-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand" href="/">Questions</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
